--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Valorant</h1>
-    <img src="imagens/vlr.png" alt="Logo do Valorant">
-    <div class="menu"><p>Home</p><p>Agentes</p><p>Mapas</p><p>Suporte</p></div>
+    <div class="cabecalho">
+        <h1>Valorant</h1>
+        <img src="exercicio/imagens/vlr.png" alt="Logo do Valorant">
+        <div class="menu"><a href="#">Home</a><a href="#">Agentes</a><a href="#">Mapas</a><a href="#">Suporte</a></div>
+    </div>
     <div class="principal">
-        <img src="imagens/vlrprincipal.jpg" alt="Valorant">
+        <img src="exercicio/imagens/vlrprincipal.jpg" alt="Valorant">
         <h2>Matéria Principal</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt porro eaque dolorum repellat beatae dicta quisquam ut! Nesciunt ducimus obcaecati, quam est maiores libero molestias vero. Blanditiis tempora laborum dolore.</p>
     </div>
@@ -21,20 +23,22 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quo beatae odio ut totam, fugiat fugit dolores odit rem officiis quasi asperiores? Cupiditate numquam veritatis odio ad! Sequi, fugit blanditiis.</p>
     </div>
 
-    <div class="anuncios">
-        <h2>Propaganda 1</h2>
-        <h2>Propaganda 2</h2>
-    </div>
+        <div class="propaganda1">
+            <a href="#">Propaganda 1</a>
+        </div>
+        <div class="propaganda2">
+            <a href="#">Propaganda 2</a>
+        </div>
 
     <div class="artigo1">
         <h2>Artigo 1</h2>
-        <img src="imagens/jett.jpg" alt="Jett">
+        <img src="exercicio/imagens/jett.jpg" alt="Jett">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, odit laboriosam asperiores totam aperiam quam dolor quae porro placeat beatae quo saepe rerum voluptates tenetur qui nesciunt ratione voluptate pariatur?</p>
     </div>
 
     <div class="artigo2">
         <h2>Artigo 2</h2>
-        <img src="imagens/raze.jpg" alt="Raze">
+        <img src="exercicio/imagens/raze.jpg" alt="Raze">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi doloremque magni corrupti ducimus assumenda quis reiciendis sunt beatae suscipit recusandae deleniti nihil repudiandae facilis autem veritatis adipisci, qui est voluptatem.</p>
     </div>
 
