terminei os anuncios, falta os artigos

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quo beatae odio ut totam, fugiat fugit dolores odit rem officiis quasi asperiores? Cupiditate numquam veritatis odio ad! Sequi, fugit blanditiis.</p>
     </div>
 
-        <div class="propaganda1">
+        <div class="anuncio1">
             <a href="#">Propaganda 1</a>
         </div>
-        <div class="propaganda2">
+
+        <div class="anuncio2">
             <a href="#">Propaganda 2</a>
         </div>
 
