--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
     <div class="principal">
         <img src="exercicio/imagens/vlrprincipal.jpg" alt="Valorant">
         <h2>Matéria Principal</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt porro eaque dolorum repellat beatae dicta quisquam ut! Nesciunt ducimus obcaecati, quam est maiores libero molestias vero. Blanditiis tempora laborum dolore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt porro eaque dolorum repellat beatae dicta quisquam ut! Nesciunt ducimus obcaecati, quam est maiores libero molestias vero. Blanditiis tempora laborum dolore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae rerum blanditiis, quo perferendis deserunt quasi voluptates? Deleniti suscipit impedit beatae modi? Aliquam eaque odit eligendi, corporis porro eum minima. Ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consequuntur exercitationem dolor vero beatae facilis cum deleniti inventore est optio tenetur error velit, voluptates eligendi. Adipisci minus earum quaerat saepe?</p>
     </div>
 
     <div class="secundario">
         <h2>Matéria Secundária</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quo beatae odio ut totam, fugiat fugit dolores odit rem officiis quasi asperiores? Cupiditate numquam veritatis odio ad! Sequi, fugit blanditiis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quo beatae odio ut totam, fugiat fugit dolores odit rem officiis quasi asperiores? Cupiditate numquam veritatis odio ad! Sequi, fugit blanditiis Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore ut porro alias natus nihil. Ad tempore distinctio provident veniam fuga maxime debitis asperiores molestiae, esse enim nesciunt ullam, nihil facilis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint error a repellat animi quia omnis fugiat perspiciatis labore neque dolorem molestias, modi magni ab ipsam qui impedit debitis, dolorum laudantium.</p>
     </div>
 
+    <div class="anuncios">
         <div class="anuncio1">
             <a href="#">Propaganda 1</a>
         </div>
-
         <div class="anuncio2">
             <a href="#">Propaganda 2</a>
         </div>
-
-    <div class="artigo1">
-        <h2>Artigo 1</h2>
-        <img src="exercicio/imagens/jett.jpg" alt="Jett">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, odit laboriosam asperiores totam aperiam quam dolor quae porro placeat beatae quo saepe rerum voluptates tenetur qui nesciunt ratione voluptate pariatur?</p>
     </div>
 
-    <div class="artigo2">
-        <h2>Artigo 2</h2>
-        <img src="exercicio/imagens/raze.jpg" alt="Raze">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi doloremque magni corrupti ducimus assumenda quis reiciendis sunt beatae suscipit recusandae deleniti nihil repudiandae facilis autem veritatis adipisci, qui est voluptatem.</p>
+    <div class="artigos">
+        <div class="artigo1">
+            <h2>Artigo 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, odit laboriosam asperiores totam aperiam quam dolor quae porro placeat beatae quo saepe rerum voluptates tenetur qui nesciunt ratione voluptate pariatur?</p>
+            <div class="imagem"><img src="exercicio/imagens/jett.jpg" alt="Jett"></div>
+        </div>
+    </div>
+
+    <div class="artigos2">
+        <div class="artigo2">
+            <h2>Artigo 2</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi doloremque magni corrupti ducimus assumenda quis reiciendis sunt beatae suscipit recusandae deleniti nihil repudiandae facilis autem veritatis adipisci, qui est voluptatem.</p>
+            <div class="imagem"><img src="exercicio/imagens/raze.jpg" alt="Raze"></div>
+        </div>
     </div>
 
     <div class="rodape">
